--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -1,3 +1,4 @@
+<!--
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".EventEditActivity">
-    
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,15 +18,17 @@
         android:textSize = "20sp"
         android:textAlignment="center"
         android:textColor="@color/teal_700"/>
-    
     <EditText
         android:id="@+id/eventNameET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="20sp"
+        android:layout_marginTop="64dp"
+        android:hint="Name: "
         android:ems="10"
-        android:inputType="text"/>
+        android:inputType="text"
+        android:padding="24dp"
+        android:textSize="48sp" />
 
     <TextView
         android:id="@+id/eventDateTV"
@@ -62,6 +65,70 @@
         android:onClick="saveEventAction"
         android:textSize="13sp"
         android:layout_gravity="center"/>
+
+
+</LinearLayout>
+-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="16dp">
+
+    <EditText
+        android:id="@+id/eventNameET"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:fontFamily="serif"
+        android:hint="Name: "
+        android:padding="24dp"
+        android:textColorHint="@android:color/secondary_text_light"
+        android:textSize="48sp" />
+
+    <Button
+        android:id="@+id/eventDateTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:backgroundTint="#FFFFFF"
+        android:fontFamily="serif"
+        android:padding="24dp"
+        android:textAlignment="viewStart"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="24sp"
+        tools:text="Date: " />
+
+    <Button
+        android:id="@+id/eventTimeTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:backgroundTint="#FFFFFF"
+        android:fontFamily="serif"
+        android:padding="24dp"
+        android:textAlignment="viewStart"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="24sp"
+        tools:text="Time: " />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@null"
+        android:backgroundTint="@color/teal_700"
+        android:fontFamily="serif"
+        android:onClick="saveEventAction"
+        android:text=" Save"
+        android:textColor="@color/teal_700"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+
 
 
 </LinearLayout>
