--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text= " weekly "
-        android:textColor="@color/teal_700"
-        android:background="@null"
-        android:backgroundTint="@color/white"
-        android:textStyle="bold"
-        android:fontFamily="serif"
-        android:onClick="weeklyAction"
-        android:textSize="20sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text= " weekly "
+            android:textColor="@color/teal_700"
+            android:background="@null"
+            android:textStyle="bold"
+            android:fontFamily="serif"
+            android:onClick="weeklyAction"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
+
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -37,6 +50,7 @@
             android:fontFamily="serif"
             android:onClick="previousMonthAction"
             android:textSize="13sp" />
+
 
         <TextView
             android:id="@+id/monthYearTV"
