--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -37,6 +37,7 @@
             android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:fontFamily="serif"/>
         <Button
             android:layout_width="0dp"
