--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text= " previous "
-            android:textColor="@color/white"
+            android:textColor="@color/teal_700"
             android:background="@null"
             android:backgroundTint="@color/teal_700"
             android:textStyle="bold"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text= "next "
-            android:textColor="@color/white"
+            android:textColor="@color/teal_700"
             android:background="@null"
             android:backgroundTint="@color/teal_700"
             android:textStyle="bold"
