--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -8,6 +8,18 @@
     android:layout_height="match_parent"
     tools:context=".WeekViewActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text= " daily"
+        android:textColor="@color/teal_700"
+        android:background="@null"
+        android:textStyle="bold"
+        android:fontFamily="serif"
+        android:onClick="dailyAction"
+        android:textSize="20sp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
