--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="20dp"
     tools:context=".DailyCalendarActivity">
 
     <LinearLayout
@@ -28,12 +29,12 @@
         <TextView
             android:id="@+id/monthDayText"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:text="Feb 2021"
-            android:textSize="20sp"
             android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="48sp" />
 
         <Button
             android:layout_width="0dp"
@@ -52,27 +53,30 @@
         android:id="@+id/dayOfWeekTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Monday"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/gray"
+        android:text="Monday"
         android:textAlignment="center"
-        android:textSize="18sp"/>
+        android:textColor="@color/gray"
+        android:textSize="34sp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Event"
-        android:textColor="@color/teal_700"
-        android:background="@null"
-        android:textStyle="bold"
-        android:onClick="newEventAction"
-        android:layout_gravity="center"
-        android:textSize="20sp"/>
 
     <ListView
         android:id="@+id/hourListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginEnd="10dp"
+        android:background="@color/teal_200"
+        android:onClick="newEventAction"
+        android:text="+"
+        android:textColor="@color/teal_700"
+        android:textSize="60sp"
+        android:textStyle="bold" />
+
 
 </LinearLayout>
