--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -11,14 +11,14 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:fontFamily="sans-serif"
         android:gravity="center"
-        android:onClick="dailyAction"
-        android:text=" daily"
+        android:text= " daily"
         android:textColor="@color/teal_700"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:background="@null"
+        android:textStyle="bold"
+        android:fontFamily="serif"
+        android:onClick="dailyAction"
+        android:textSize="20sp" />
 
 
     <LinearLayout
@@ -27,43 +27,42 @@
         android:orientation="horizontal"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp">
-
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text= " previous "
+            android:textColor="@color/teal_700"
             android:background="@null"
             android:backgroundTint="@color/teal_700"
-            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:fontFamily="serif"
             android:onClick="previousWeekAction"
-            android:text=" previous "
-            android:textColor="@color/teal_700"
-            android:textSize="13sp"
-            android:textStyle="bold" />
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/monthYearTV"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:fontFamily="More Fonts..."
+            android:layout_height="wrap_content"
             android:text="November "
+            android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="20sp" />
-
+            android:textStyle="bold"
+            android:fontFamily="serif"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text= "next "
+            android:textColor="@color/teal_700"
             android:background="@null"
             android:backgroundTint="@color/teal_700"
-            android:fontFamily="sans-serif"
+            android:textStyle="bold"
             android:onClick="nextWeekAction"
-            android:text="next "
-            android:textColor="@color/teal_700"
             android:textSize="13sp"
-            android:textStyle="bold" />
+            android:fontFamily="serif"/>
     </LinearLayout>
 
     <LinearLayout
@@ -75,71 +74,65 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="SUN"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="MON"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="TUE"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="WED"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="THURS"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="FRI"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
-
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="sans-serif"
             android:text="SAT"
-            android:textAlignment="center"
             android:textColor="@color/teal_700"
-            android:textSize="16sp" />
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:fontFamily="serif"/>
 
 
     </LinearLayout>
@@ -153,15 +146,15 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:text= " New Event "
+        android:textColor="@color/teal_700"
         android:background="@null"
         android:backgroundTint="@color/teal_700"
-        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:fontFamily="serif"
         android:onClick="newEventAction"
-        android:text=" New Event "
-        android:textColor="@color/teal_700"
         android:textSize="13sp"
-        android:textStyle="bold" />
+        android:layout_gravity="center"/>
 
     <ListView
         android:id="@+id/eventListView"
